Adds meta field to yaml.  Starts population.

--- a/_data/cheatcodes.yaml
+++ b/_data/cheatcodes.yaml
@@ -2,421 +2,631 @@ cheatcodes:
 
     - genre: "Action & Adventure"
       id: 1365
+      meta: ""
     - genre: "Action Comedies"
       id: 43040
+      meta: "comedy humors funny"
     - genre: "Action Sci-Fi & Fantasy"
       id: 1568
+      meta: ""
     - genre: "Action Thrillers"
       id: 43048
+      meta: ""
     - genre: "Adult Animation"
       id: 11881
+      meta: ""
     - genre: "Adventures"
       id: 7442
+      meta: ""
     - genre: "African Movies"
       id: 3761
+      meta: ""
     - genre: "Alien Sci-Fi"
       id: 3327
+      meta: ""
     - genre: "Animal Tales"
       id: 5507
+      meta: ""
     - genre: "Anime"
       id: 7424
+      meta: ""
     - genre: "Anime Action"
       id: 2653
+      meta: ""
     - genre: "Anime Comedies"
       id: 9302
+      meta: "comedy humors funny"
     - genre: "Anime Dramas"
       id: 452
+      meta: ""
     - genre: "Anime Fantasy"
       id: 11146
+      meta: ""
     - genre: "Anime Features"
       id: 3063
+      meta: ""
     - genre: "Anime Horror"
       id: 10695
+      meta: ""
     - genre: "Anime Sci-Fi"
       id: 2729
+      meta: ""
     - genre: "Anime Series"
       id: 6721
+      meta: ""
     - genre: "Art House Movies"
       id: 29764
+      meta: ""
     - genre: "Asian Action Movies"
       id: 77232
+      meta: ""
     - genre: "Australian Movies"
       id: 5230
+      meta: ""
     - genre: "B-Horror Movies"
       id: 8195
+      meta: ""
     - genre: "Baseball Movies"
       id: 12339
+      meta: ""
     - genre: "Basketball Movies"
       id: 12762
+      meta: ""
     - genre: "Belgian Movies"
       id: 262
+      meta: ""
     - genre: "Biographical Documentaries"
       id: 3652
+      meta: ""
     - genre: "Biographical Dramas"
       id: 3179
+      meta: ""
     - genre: "Boxing Movies"
       id: 12443
+      meta: ""
     - genre: "British Movies"
       id: 10757
+      meta: ""
     - genre: "British TV Shows"
       id: 52117
+      meta: ""
     - genre: "Campy Movies"
       id: 1252
+      meta: ""
     - genre: "Children & Family Movies"
       id: 783
+      meta: ""
     - genre: "Chinese Movies"
       id: 3960
+      meta: ""
     - genre: "Classic Action & Adventure"
       id: 46576
+      meta: ""
     - genre: "Classic Comedies"
       id: 31694
+      meta: "comedy humors funny"
     - genre: "Classic Dramas"
       id: 29809
+      meta: ""
     - genre: "Classic Foreign Movies"
       id: 32473
+      meta: ""
     - genre: "Classic Movies"
       id: 31574
+      meta: ""
     - genre: "Classic Musicals"
       id: 32392
+      meta: ""
     - genre: "Classic Romantic Movies"
       id: 31273
+      meta: ""
     - genre: "Classic Sci-Fi & Fantasy"
       id: 47147
+      meta: ""
     - genre: "Classic Thrillers"
       id: 46588
+      meta: ""
     - genre: "Classic TV Shows"
       id: 46553
+      meta: ""
     - genre: "Classic War Movies"
       id: 48744
+      meta: ""
     - genre: "Classic Westerns"
       id: 47465
+      meta: ""
     - genre: "Comedies"
       id: 6548
+      meta: "comedy humors funny"
     - genre: "Comic Book and Superhero Movies"
       id: 10118
+      meta: ""
     - genre: "Country & Western/Folk"
       id: 1105
+      meta: ""
     - genre: "Courtroom Dramas"
       id: 528582748
+      meta: ""
     - genre: "Creature Features"
       id: 6895
+      meta: ""
     - genre: "Crime Action & Adventure"
       id: 9584
+      meta: ""
     - genre: "Crime Documentaries"
       id: 9875
+      meta: ""
     - genre: "Crime Dramas"
       id: 6889
+      meta: ""
     - genre: "Crime Thrillers"
       id: 10499
+      meta: ""
     - genre: "Crime TV Shows"
       id: 26146
+      meta: ""
     - genre: "Cult Comedies"
       id: 9434
+      meta: "classics comedy humors funny"
     - genre: "Cult Horror Movies"
       id: 10944
+      meta: ""
     - genre: "Cult Movies"
       id: 7627
+      meta: ""
     - genre: "Cult Sci-Fi & Fantasy"
       id: 4734
+      meta: ""
     - genre: "Cult TV Shows"
       id: 74652
+      meta: ""
     - genre: "Dark Comedies"
       id: 869
+      meta: "noirs comedy humors funny"
     - genre: "Deep Sea Horror Movies"
       id: 45028
+      meta: ""
     - genre: "Disney"
       id: 67673
+      meta: ""
     - genre: "Disney Musicals"
       id: 59433
+      meta: ""
     - genre: "Documentaries"
       id: 6839
+      meta: ""
     - genre: "Dramas"
       id: 5763
+      meta: ""
     - genre: "Dramas based on Books"
       id: 4961
+      meta: ""
     - genre: "Dramas based on real life"
       id: 3653
+      meta: ""
     - genre: "Dutch Movies"
       id: 10606
+      meta: ""
     - genre: "Eastern European Movies"
       id: 5254
+      meta: ""
     - genre: "Education for Kids"
       id: 10659
+      meta: ""
     - genre: "Epics"
       id: 52858
+      meta: ""
     - genre: "Experimental Movies"
       id: 11079
+      meta: ""
     - genre: "Faith & Spirituality"
       id: 26835
+      meta: ""
     - genre: "Faith & Spirituality Movies"
       id: 52804
+      meta: ""
     - genre: "Family Features"
       id: 51056
+      meta: ""
     - genre: "Fantasy Movies"
       id: 9744
+      meta: ""
     - genre: "Film Noir"
       id: 7687
+      meta: ""
     - genre: "Food & Travel TV"
       id: 72436
+      meta: ""
     - genre: "Football Movies"
       id: 12803
+      meta: ""
     - genre: "Foreign Action & Adventure"
       id: 11828
+      meta: ""
     - genre: "Foreign Comedies"
       id: 4426
+      meta: "comedy humors funny"
     - genre: "Foreign Documentaries"
       id: 5161
+      meta: ""
     - genre: "Foreign Dramas"
       id: 2150
+      meta: ""
     - genre: "Foreign Gay & Lesbian Movies"
       id: 8243
+      meta: ""
     - genre: "Foreign Horror Movies"
       id: 8654
+      meta: ""
     - genre: "Foreign Movies"
       id: 7462
+      meta: ""
     - genre: "Foreign Sci-Fi & Fantasy"
       id: 6485
+      meta: ""
     - genre: "Foreign Thrillers"
       id: 10306
+      meta: ""
     - genre: "French Movies"
       id: 58807
+      meta: ""
     - genre: "Gangster Movies"
       id: 31851
+      meta: ""
     - genre: "Gay & Lesbian Dramas"
       id: 500
+      meta: ""
     - genre: "German Movies"
       id: 58886
+      meta: ""
     - genre: "Greek Movies"
       id: 61115
+      meta: ""
     - genre: "Historical Documentaries"
       id: 5349
+      meta: ""
     - genre: "Horror Comedy"
       id: 89585
+      meta: ""
     - genre: "Horror Movies"
       id: 8711
+      meta: ""
     - genre: "Independent Action & Adventure"
       id: 11804
+      meta: ""
     - genre: "Independent Comedies"
       id: 4195
+      meta: "comedy humors funny"
     - genre: "Independent Dramas"
       id: 384
+      meta: ""
     - genre: "Independent Movies"
       id: 7077
+      meta: ""
     - genre: "Independent Thrillers"
       id: 3269
+      meta: ""
     - genre: "Indian Movies"
       id: 10463
+      meta: ""
     - genre: "Irish Movies"
       id: 58750
+      meta: ""
     - genre: "Italian Movies"
       id: 8221
+      meta: ""
     - genre: "Japanese Movies"
       id: 10398
+      meta: ""
     - genre: "Jazz & Easy Listening"
       id: 10271
+      meta: ""
     - genre: "Kids Faith & Spirituality"
       id: 751423
+      meta: ""
     - genre: "Kids Music"
       id: 52843
+      meta: ""
     - genre: "Kids’ TV"
       id: 27346
+      meta: ""
     - genre: "Korean Movies"
       id: 5685
+      meta: ""
     - genre: "Korean TV Shows"
       id: 67879
+      meta: ""
     - genre: "Late Night Comedies"
       id: 1402
+      meta: "comedy humors funny"
     - genre: "Latin American Movies"
       id: 1613
+      meta: ""
     - genre: "Latin Music"
       id: 10741
+      meta: ""
     - genre: "Martial Arts Movies"
       id: 8985
+      meta: ""
     - genre: "Martial Arts, Boxing & Wrestling"
       id: 6695
+      meta: ""
     - genre: "Middle Eastern Movies"
       id: 5875
+      meta: ""
     - genre: "Military Action & Adventure"
       id: 2125
+      meta: ""
     - genre: "Military Documentaries"
       id: 4006
+      meta: ""
     - genre: "Military Dramas"
       id: 11
+      meta: ""
     - genre: "Military TV Shows"
       id: 25804
+      meta: ""
     - genre: "Miniseries"
       id: 4814
+      meta: ""
     - genre: "Mockumentaries"
       id: 26
+      meta: ""
     - genre: "Monster Movies"
       id: 947
+      meta: ""
     - genre: "Movies based on children’s books"
       id: 10056
+      meta: ""
     - genre: "Movies for ages 0 to 2"
       id: 6796
+      meta: ""
     - genre: "Movies for ages 2 to 4"
       id: 6218
+      meta: ""
     - genre: "Movies for ages 5 to 7"
       id: 5455
+      meta: ""
     - genre: "Movies for ages 8 to 10"
       id: 561
+      meta: ""
     - genre: "Movies for ages 11 to 12"
       id: 6962
+      meta: ""
     - genre: "Music & Concert Documentaries"
       id: 90361
+      meta: ""
     - genre: "Music"
       id: 1701
+      meta: ""
     - genre: "Musicals"
       id: 13335
+      meta: ""
     - genre: "Mysteries"
       id: 9994
+      meta: ""
     - genre: "New Zealand Movies"
       id: 63782
+      meta: ""
     - genre: "Period Pieces"
       id: 12123
+      meta: ""
     - genre: "Political Comedies"
       id: 2700
+      meta: "comedy humors funny"
     - genre: "Political Documentaries"
       id: 7018
+      meta: ""
     - genre: "Political Dramas"
       id: 6616
+      meta: ""
     - genre: "Political Thrillers"
       id: 10504
+      meta: ""
     - genre: "Psychological Thrillers"
       id: 5505
+      meta: ""
     - genre: "Quirky Romance"
       id: 36103
+      meta: ""
     - genre: "Reality TV"
       id: 9833
+      meta: ""
     - genre: "Religious Documentaries"
       id: 10005
+      meta: ""
     - genre: "Rock & Pop Concerts"
       id: 3278
+      meta: ""
     - genre: "Romantic Comedies"
       id: 5475
+      meta: "comedy humors funny"
     - genre: "Romantic Dramas"
       id: 1255
+      meta: ""
     - genre: "Romantic Favorites"
       id: 502675
+      meta: ""
     - genre: "Romantic Foreign Movies"
       id: 7153
+      meta: ""
     - genre: "Romantic Independent Movies"
       id: 9916
+      meta: ""
     - genre: "Romantic Movies"
       id: 8883
+      meta: ""
     - genre: "Russian"
       id: 11567
+      meta: ""
     - genre: "Satanic Stories"
       id: 6998
+      meta: ""
     - genre: "Satires"
       id: 4922
+      meta: ""
     - genre: "Scandinavian Movies"
       id: 9292
+      meta: ""
     - genre: "Sci-Fi & Fantasy"
       id: 1492
+      meta: ""
     - genre: "Sci-Fi Adventure"
       id: 6926
+      meta: ""
     - genre: "Sci-Fi Dramas"
       id: 3916
+      meta: ""
     - genre: "Sci-Fi Horror Movies"
       id: 1694
+      meta: ""
     - genre: "Sci-Fi Thrillers"
       id: 11014
+      meta: ""
     - genre: "Science & Nature Documentaries"
       id: 2595
+      meta: ""
     - genre: "Science & Nature TV"
       id: 52780
+      meta: ""
     - genre: "Screwball Comedies"
       id: 9702
+      meta: "comedy humors funny"
     - genre: "Showbiz Dramas"
       id: 5012
+      meta: ""
     - genre: "Showbiz Musicals"
       id: 13573
+      meta: ""
     - genre: "Silent Movies"
       id: 53310
+      meta: ""
     - genre: "Slapstick Comedies"
       id: 10256
+      meta: "comedy humors funny"
     - genre: "Slasher and Serial Killer Movies"
       id: 8646
+      meta: ""
     - genre: "Soccer Movies"
       id: 12549
+      meta: ""
     - genre: "Social & Cultural Documentaries"
       id: 3675
+      meta: ""
     - genre: "Social Issue Dramas"
       id: 3947
+      meta: ""
     - genre: "Southeast Asian Movies"
       id: 9196
+      meta: ""
     - genre: "Spanish Movies"
       id: 58741
+      meta: ""
     - genre: "Spiritual Documentaries"
       id: 2760
+      meta: ""
     - genre: "Sports & Fitness"
       id: 9327
+      meta: ""
     - genre: "Sports Comedies"
       id: 5286
+      meta: "comedy humors funny"
     - genre: "Sports Documentaries"
       id: 180
+      meta: ""
     - genre: "Sports Dramas"
       id: 7243
+      meta: ""
     - genre: "Sports Movies"
       id: 4370
+      meta: ""
     - genre: "Spy Action & Adventure"
       id: 10702
+      meta: ""
     - genre: "Spy Thrillers"
       id: 9147
+      meta: ""
     - genre: "Stage Musicals"
       id: 55774
+      meta: ""
     - genre: "Stand-up Comedy"
       id: 11559
+      meta: ""
     - genre: "Steamy Romantic Movies"
       id: 35800
+      meta: ""
     - genre: "Steamy Thrillers"
       id: 972
+      meta: ""
     - genre: "Supernatural Horror Movies"
       id: 42023
+      meta: ""
     - genre: "Supernatural Thrillers"
       id: 11140
+      meta: ""
     - genre: "Tearjerkers"
       id: 6384
+      meta: ""
     - genre: "Teen Comedies"
       id: 3519
+      meta: "comedy humors funny"
     - genre: "Teen Dramas"
       id: 9299
+      meta: ""
     - genre: "Teen Screams"
       id: 52147
+      meta: ""
     - genre: "Teen TV Shows"
       id: 60951
+      meta: ""
     - genre: "Thrillers"
       id: 8933
+      meta: ""
     - genre: "Travel & Adventure Documentaries"
       id: 1159
+      meta: ""
     - genre: "TV Action & Adventure"
       id: 10673
+      meta: ""
     - genre: "TV Cartoons"
       id: 11177
+      meta: ""
     - genre: "TV Comedies"
       id: 10375
+      meta: "televisions sitcoms comedy humors funny"
     - genre: "TV Documentaries"
       id: 10105
+      meta: ""
     - genre: "TV Dramas"
       id: 11714
+      meta: ""
     - genre: "TV Horror"
       id: 83059
+      meta: ""
     - genre: "TV Mysteries"
       id: 4366
+      meta: ""
     - genre: "TV Sci-Fi & Fantasy"
       id: 1372
+      meta: ""
     - genre: "TV Shows"
       id: 83
+      meta: ""
     - genre: "Urban & Dance Concerts"
       id: 9472
+      meta: ""
     - genre: "Vampire Horror Movies"
       id: 75804
+      meta: ""
     - genre: "Werewolf Horror Movies"
       id: 75930
+      meta: ""
     - genre: "Westerns"
       id: 7700
+      meta: ""
     - genre: "World Music Concerts"
       id: 2856
+      meta: ""
     - genre: "Zombie Horror Movies"
       id: 75405
+      meta: ""
